# Semantic_Search_System

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/: data.json
docs/: plan.md  responsibilities.md
frontend/: index.html
reports/: 24943 Червов Сотников Отчёт 04-05.md  24943 Червов Сотников Отчёт 27-04.md  a.md
src/database/: database.py
src/frontend/: frontend.py
src/frontend/static/: script.js  style.css
src/frontend/templates/: index.html
src/ml/: ml_engine.py
